--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PORTFOLIO</title>
 
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/second.css" />
-    <link rel="stylesheet" href="css/swiper.css" />
-    <link rel="stylesheet" href="css/fourth.css">
-
+    <link rel="stylesheet" href="css/index.css?v=1.1" />
+    <link rel="stylesheet" href="css/second.css?v=1.1" />
+    <link rel="stylesheet" href="css/swiper.css?v=1.1" />
+    <link rel="stylesheet" href="css/fourth.css?v=1.1" />
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
 
@@ -107,6 +107,7 @@
                         <p class="card-desc">
                           안녕하세요! 웹 개발에 열정을 가진 신입 개발자 <b>박소영</b>입니다. <br>
                           리액트를 활용한 프론트엔드 개발을 목표로, 사용자 중심의 UI/UX 설계에 집중하며 웹 애플리케이션의 사용성과 직관적인 인터페이스를 개선하는 데 힘쓰고 있습니다. <br>
+                          <br>
                           HTML, CSS, JavaScript와 리액트(Redux, React Router 등)를 활용한 개발 경험이 있으며, 상태 관리와 성능 최적화에 대해 학습하였습니다. <br>
                           또한, 웹 표준과 접근성, 최적화 원칙을 준수하며 팀원들과 협력하는 경험도 쌓았습니다. <br>
                           앞으로 실무에 빠르게 적응하고 사용자의 경험을 최우선으로 생각하는 개발자가 되도록 계속 노력하겠습니다.
