--- a/index.html
+++ b/index.html
@@ -83,38 +83,6 @@
           <div class="blur"></div>
           <div class="blur"></div>
 
-          <!-- <h1 class="main_h1">
-            안녕하세요. <br> 신입 퍼블리셔
-            <span class="magic">
-              <span class="magic-star">
-                <svg viewBox="0 0 512 512">
-                  <path
-                    d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z"
-                  />
-                </svg>
-              </span>
-              <span class="magic-star">
-                <svg viewBox="0 0 512 512">
-                  <path
-                    d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z"
-                  />
-                </svg>
-              </span>
-              <span class="magic-star">
-                <svg viewBox="0 0 512 512">
-                  <path
-                    d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z"
-                  />
-                </svg>
-              </span>
-              <span class="magic-text">박소영입니다.</span>
-            </span>
-          </h1>
-
-          <div class="mouse">
-            <img src="img/mouse.png" alt="mouse">
-          </div> -->
-
           <div class="loader">
             <marquee direction="right" scrollamount="30"
                 >HTML, CSS, JavaScript, React, Responsive Web Design, Cross-Browser Compatibility, 
@@ -162,7 +130,7 @@
                   <a class="menu__item">
                     <div class="menu__item-image_wrapper">
                       <div class="menu__item-image_inner">
-                        <img class="menu__item-image" src="/img/giodano_pr.png" alt="giodano" />
+                        <img class="menu__item-image" src="img/giodano_pr.png" alt="giodano" />
                       </div>
                     </div>
                     <span class="menu__item-text"><span class="menu__item-innertext">React</span></span>
@@ -170,7 +138,7 @@
                   <a class="menu__item">
                     <div class="menu__item-image_wrapper">
                       <div class="menu__item-image_inner">
-                        <img class="menu__item-image" src="/img/ridibooks_pr.png" alt="ridibooks" />
+                        <img class="menu__item-image" src="img/ridibooks_pr.png" alt="ridibooks" />
                       </div>
                     </div>
                     <span class="menu__item-text"><span class="menu__item-innertext">Open Api</span></span>
@@ -178,7 +146,7 @@
                   <a class="menu__item">
                     <div class="menu__item-image_wrapper">
                       <div class="menu__item-image_inner">
-                        <img class="menu__item-image" src="/img/Melbourne_pr.png" alt="Melbourne" />
+                        <img class="menu__item-image" src="img/Melbourne_pr.png" alt="Melbourne" />
                       </div>
                     </div>
                     <span class="menu__item-text"><span class="menu__item-innertext">Team Project</span></span>
@@ -186,7 +154,7 @@
                   <a class="menu__item">
                     <div class="menu__item-image_wrapper">
                       <div class="menu__item-image_inner">
-                        <img class="menu__item-image" src="/img/marie_pr.png" alt="marie" />
+                        <img class="menu__item-image" src="img/marie_pr.png" alt="marie" />
                       </div>
                     </div>
                     <span class="menu__item-text"><span class="menu__item-innertext">Responsive</span></span>
